Fix(Sotre): modify response in the get alls documents
